--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,25 @@ body{
     color: #ffffff;
 }
 
+.section-heading{
+    margin-bottom: 5px;
+    font-size: 48px;
+    font-weight: 600;
+    color: #0A0826;
+    text-align: center;
+}
+
+.section-heading > span{
+    color: #E76F51;
+}
+
+.section-title{
+    font-size: 14px;
+    color: #E76F51;
+    text-align: center;
+    margin-bottom: 25px;
+}
+
 /* header style */
 
 .header-sec{
@@ -64,6 +83,41 @@ body{
     width: 522px;
 }
 
+/* fetured style */
+
+.fetured-img{
+    display: block;
+    margin: 0 auto;
+    width: 285px;
+    height: 240px;
+}
+
+.fetured-img-gray{
+    filter: grayscale(100%);
+}
+
+/* latest news style */
+
+.bikes-card{
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.news-header{
+    font-weight: 600;
+    color: #18191F;
+    font-size: 28px;
+    margin-top: 15px;
+}
+
+.news-desc{
+    text-align: justify;
+    color: #6C6C6C;
+    font-size: 15px;
+}
+
+/* medium devices */
+
 @media (max-width:768px){
     .nav-bg{
         margin-top: 10px;
@@ -74,9 +128,17 @@ body{
     }
 }
 
+/* small devices */
+
 @media (max-width: 540px){
     .hero-header{
         font-size: 40px;
         font-weight: 700;
+    }
+    .section-heading{
+        font-size: 38px;
+    }
+    .news-header{
+        font-size: 24px;
     }
 }
